--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cors": "^2.8.4",
     "express": "^4.13.3",
     "mongodb": "^2.1.6"
   }
